--- a/electographs/Gemfile
+++ b/electographs/Gemfile
@@ -5,9 +5,11 @@ source 'https://rubygems.org'
 gem 'rails', '4.2.4'
 # Use postgresql as the database for Active Record
 gem 'pg'
+
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
 
+gem "bootswatch-rails"
 #Bootstrap
 gem 'bootstrap-sass', '~> 3.3.5'
 
